# atlas

./: .dockerignore  .gitignore  AUDIT-ALGEBRAKIT.md  AUDIT-ATLAS-ANALYSIS.md  AUDIT-CONNECTORS.md  AUDIT-FOUNDATIONS.md  AUDIT-REPORT.md  AUDIT-SECURITY.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  RELEASING.md  SQLITE-CONNECTOR-SPEC.md  TODOS.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/DISCUSSION_TEMPLATE/: bug-report.yml  feature-request.yml  general.yml
.github/actions/alma-ci/: action.yml  github_reporting.py  report_ci_run.py
.github/workflows/: alma-ci-example.yml  ci.yml  docs.yml  publish.yml
docs/: adapters.md  architecture.md  config-reference.md  graph_core_boundary.md  index.md  mcp-tools.md  quickstart.md
docs/launch/: blog-post-draft.md  show-hn-draft.md  twitter-thread-draft.md
docs/reference/: index.md
docs/reference/api/: index.md
scripts/: check-pypi.py  gen_ref_pages.py  generate_sample_data.py  release.sh  sync-versions.py  typecheck_targets.py  workspace_packages.py
testdata/dbt/: integration_manifest.json
testdata/emulate/: github-default.yaml
