[project]
name = "alma-atlas-workspace"
version = "0.1.0"
description = "Alma Atlas — open-source data stack discovery CLI + MCP server (workspace root)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.9.0",
]

[tool.uv.workspace]
members = [
    "packages/alma-ports",
    "packages/alma-sqlkit",
    "packages/alma-algebrakit",
    "packages/alma-atlas-store",
    "packages/alma-connectors",
    "packages/alma-analysis",
    "packages/alma-atlas",
]

[tool.uv.sources]
alma-ports = { workspace = true }
alma-sqlkit = { workspace = true }
alma-algebrakit = { workspace = true }
alma-atlas-store = { workspace = true }
alma-connectors = { workspace = true }
alma-analysis = { workspace = true }
alma-atlas = { workspace = true }

[dependency-groups]
dev = [
    "google-cloud-bigquery>=3.27",
    "psycopg[binary]>=3.3.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a6",
    "z3-solver>=4.12.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# learning/__init__.py uses TYPE_CHECKING imports with _ aliases for __getattr__ lazy loading
"**/alma_algebrakit/learning/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = [
    "alma_ports",
    "alma_sqlkit",
    "alma_algebrakit",
    "alma_atlas_store",
    "alma_connectors",
    "alma_analysis",
    "alma_atlas",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--import-mode=importlib"]
markers = ["real_e2e: marks tests that hit real external services (Postgres + Anthropic API)"]

[tool.alma]
typecheck-targets = [
    "packages/alma-atlas/src/alma_atlas/config.py",
    "packages/alma-atlas/src/alma_atlas/config_store.py",
    "packages/alma-atlas/src/alma_atlas/source_registry.py",
    "packages/alma-atlas/src/alma_atlas/source_runtime.py",
    "packages/alma-atlas/src/alma_atlas/local_secrets.py",
    "packages/alma-atlas/src/alma_atlas/async_utils.py",
    "packages/alma-atlas/src/alma_atlas/http_utils.py",
    "packages/alma-atlas/src/alma_atlas/graph_service.py",
    "packages/alma-atlas/src/alma_atlas/contract_validation.py",
    "packages/alma-atlas/src/alma_atlas/contract_service.py",
    "packages/alma-atlas/src/alma_atlas/cli/common.py",
    "packages/alma-atlas/src/alma_atlas/cli/connect.py",
    "packages/alma-atlas/src/alma_atlas/cli/learn.py",
    "packages/alma-atlas/src/alma_atlas/cli/scan.py",
    "packages/alma-atlas/src/alma_atlas/cli/team.py",
    "packages/alma-atlas/src/alma_atlas/cli/serve.py",
    "packages/alma-atlas/src/alma_atlas/pipeline/learn.py",
    "packages/alma-atlas/src/alma_atlas/pipeline/scan.py",
    "packages/alma-atlas/src/alma_atlas/pipeline/scanner_v2.py",
    "packages/alma-atlas/src/alma_atlas/pipeline/stitch.py",
    "packages/alma-atlas/src/alma_atlas/enforcement/runtime.py",
    "packages/alma-atlas/src/alma_atlas/enforcement/engine.py",
    "packages/alma-atlas/src/alma_atlas/sync/client.py",
    "packages/alma-atlas/src/alma_atlas/sync/service.py",
    "packages/alma-atlas-store/src/alma_atlas_store/schema_repository.py",
    "packages/alma-atlas-store/src/alma_atlas_store/violation_repository.py",
    "packages/alma-atlas-store/src/alma_atlas_store/consumer_repository.py",
    "packages/alma-atlas-store/src/alma_atlas_store/session.py",
    "packages/alma-sqlkit/src/alma_sqlkit/table_refs.py",
    "packages/alma-sqlkit/src/alma_sqlkit/inspection.py",
    "packages/alma-sqlkit/src/alma_sqlkit/lineage.py",
    "packages/alma-sqlkit/src/alma_sqlkit/parser/sql_parser.py",
    "packages/alma-sqlkit/src/alma_sqlkit/binder/sql_binder.py",
    "packages/alma-analysis/src/alma_analysis/lineage_extractor.py",
    "packages/alma-analysis/src/alma_analysis/lineage_inference.py",
    "packages/alma-analysis/src/alma_analysis/derived_analytics.py",
    "packages/alma-analysis/src/alma_analysis/edges.py",
    "packages/alma-connectors/src/alma_connectors/registry.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter_service.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter_runtime.py",
    "packages/alma-connectors/src/alma_connectors/adapters/bigquery.py",
    "packages/alma-connectors/src/alma_connectors/adapters/snowflake.py",
    "packages/alma-algebrakit/src/alma_algebrakit/rewriting/predicates.py",
    "scripts/sync-versions.py",
    "scripts/workspace_packages.py",
    "scripts/typecheck_targets.py",
]
