[project]
name = "alma-atlas-workspace"
version = "0.1.0"
description = "Alma Atlas — open-source data stack discovery CLI + MCP server (workspace root)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent-client-protocol>=0.9.0",
    "anthropic>=0.93.0",
]

[tool.uv.workspace]
members = [
    "packages/alma-ports",
    "packages/alma-sqlkit",
    "packages/alma-algebrakit",
    "packages/alma-atlas-store",
    "packages/alma-connectors",
    "packages/alma-analysis",
    "packages/alma-atlas",
]

[tool.uv.sources]
alma-ports = { workspace = true }
alma-sqlkit = { workspace = true }
alma-algebrakit = { workspace = true }
alma-atlas-store = { workspace = true }
alma-connectors = { workspace = true }
alma-analysis = { workspace = true }
alma-atlas = { workspace = true }

[dependency-groups]
dev = [
    "google-cloud-bigquery>=3.27",
    "psycopg[binary]>=3.3.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.9",
    "ty>=0.0.1a6",
    "z3-solver>=4.12.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.6.1",
    "mkdocs-literate-nav>=0.6.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-section-index>=0.3.11",
    "mkdocstrings[python]>=1.0.3",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
# learning/__init__.py uses TYPE_CHECKING imports with _ aliases for __getattr__ lazy loading
"**/alma_algebrakit/learning/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = [
    "alma_ports",
    "alma_sqlkit",
    "alma_algebrakit",
    "alma_atlas_store",
    "alma_connectors",
    "alma_analysis",
    "alma_atlas",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages"]
python_files = ["test_*.py", "*_test.py"]
addopts = ["--import-mode=importlib"]
markers = [
    "real_e2e: marks tests that hit real external services (Postgres + Anthropic API)",
    "connector_smoke: marks connector smoke tests that hit real Snowflake / dbt trial accounts (skipped without env vars)",
]
filterwarnings = ["error::DeprecationWarning"]

[tool.alma]
typecheck-targets = [
    "packages/alma-atlas/src",
    "packages/alma-atlas-store/src",
    "packages/alma-analysis/src",
    "packages/alma-ports/src",
    "packages/alma-connectors/src/alma_connectors/catalog.py",
    "packages/alma-connectors/src/alma_connectors/definition_codec.py",
    "packages/alma-connectors/src/alma_connectors/runtime_factory.py",
    "packages/alma-connectors/src/alma_connectors/registry.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter_runtime.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter_service.py",
    "packages/alma-connectors/src/alma_connectors/source_adapter_v2.py",
    "packages/alma-connectors/src/alma_connectors/adapters/airflow.py",
    "packages/alma-connectors/src/alma_connectors/adapters/bigquery.py",
    "packages/alma-connectors/src/alma_connectors/adapters/dbt.py",
    "packages/alma-connectors/src/alma_connectors/adapters/fivetran.py",
    "packages/alma-connectors/src/alma_connectors/adapters/looker.py",
    "packages/alma-connectors/src/alma_connectors/adapters/metabase.py",
    "packages/alma-connectors/src/alma_connectors/adapters/snowflake.py",
    "packages/alma-sqlkit/src/alma_sqlkit/table_refs.py",
    "packages/alma-sqlkit/src/alma_sqlkit/inspection.py",
    "packages/alma-sqlkit/src/alma_sqlkit/lineage.py",
    "packages/alma-sqlkit/src/alma_sqlkit/parser/sql_parser.py",
    "packages/alma-sqlkit/src/alma_sqlkit/binder/sql_binder.py",
    "packages/alma-algebrakit/src/alma_algebrakit/rewriting/predicates.py",
    "scripts",
]
